tests/ui/const-generics/raw-ptr-const-param-deref.adt_const_params.stderr
error[E0741]: using raw pointers as const generic parameters is forbidden
  --> $DIR/raw-ptr-const-param-deref.rs:11:23
   |
LL | struct Const<const P: *const u32>;
   |                       ^^^^^^^^^^

error[E0741]: using raw pointers as const generic parameters is forbidden
  --> $DIR/raw-ptr-const-param-deref.rs:13:15
   |
LL | impl<const P: *const u32> Const<P> {
   |               ^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0741`.
